welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: '(' expected but identifier found.
	if litMessage == "R" {
           ^BDRBuggle:32: error: illegal start of simple expression
}
^